--- a/package.json
+++ b/package.json
@@ -3,6 +3,15 @@
     "version": "0.0.1",
     "description": "communication with DELTA AS324MT",
     "dependencies": {
+        "dotenv-safe": "^6.1.0",
         "express": "^4.16.3"
+    },
+    "devDependencies": {
+        "eslint": "^5.8.0",
+        "eslint-config-standard": "^12.0.0",
+        "eslint-plugin-import": "^2.14.0",
+        "eslint-plugin-node": "^8.0.0",
+        "eslint-plugin-promise": "^4.0.1",
+        "eslint-plugin-standard": "^4.0.0"
     }
 }
