--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "dotenv-safe": "^6.1.0",
         "express": "^4.16.3",
+        "moment": "^2.23.0",
         "ws": "^6.1.2"
     },
     "devDependencies": {
